--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -76,7 +76,7 @@
             <p>Hosted By</p>
             <a href="{% url 'user-profile' user.id %}" class="room__author">
               <div class="avatar avatar--small">
-                <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+                <img src="{{room.host.avatar.url}}" />
               </div>
               <span>@{{room.host.username}}</span>
             </a>
@@ -94,7 +94,7 @@
                 <div class="thread__author">
                   <a href="{% url 'user-profile' user.id %}" class="thread__authorInfo">
                     <div class="avatar avatar--small">
-                      <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+                      <img src="{{message.user.avatar.url}}" />
                     </div>
                     <span>@{{message.user.username}}</span>
                   </a>
@@ -137,7 +137,7 @@
         {% for user in participants %}
         <a href="{% url 'user-profile' user.id %}" class="participant">
           <div class="avatar avatar--medium">
-            <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+            <img src="{{message.user.avatar.url}}" />
           </div>
           <p>
             {{user.username}}
